<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carpooling"
                    android:textSize="34sp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/teal_700"
                    android:shadowColor="@color/black"
                    android:fontFamily="@font/lobster"
                    android:layout_marginBottom="16dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/car_icon"
                    android:layout_marginStart="1dp"
                    android:contentDescription="Car Icon" />
            </LinearLayout>
        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create Account"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_700"
                    android:layout_marginBottom="24dp" />

                <EditText
                    android:id="@+id/signupName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginBottom="12dp"
                    android:drawableStart="@drawable/baseline_face_24" />

                <EditText
                    android:id="@+id/signupSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginBottom="12dp" />

                <EditText
                    android:id="@+id/signupEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginBottom="12dp" />

                <EditText
                    android:id="@+id/signupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginBottom="12dp"
                    android:drawableStart="@drawable/baseline_https_24" />

                <EditText
                    android:id="@+id/signupConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:background="@drawable/rounded_edittext"
                    android:layout_marginBottom="12dp" />

                <RadioGroup
                    android:id="@+id/userTypeGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="16dp">

                    <RadioButton
                        android:id="@+id/passengerRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passenger"
                        android:paddingEnd="16dp"
                        android:button="@drawable/custom_radio_button" />

                    <RadioButton
                        android:id="@+id/driverRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/driver"
                        android:button="@drawable/custom_radio_button" />
                </RadioGroup>

                <Button
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:backgroundTint="@color/teal_700"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />

                <TextView
                    android:id="@+id/goToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_to_login"
                    android:textColor="@color/teal_700"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/lobster"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
